feat: add dummy launcher shortcut for now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TimePiece</string>
+    <string name="stopwatch_long_shortcut">Start stopwatch</string>
+    <string name="stopwatch_short_shortcut">Start</string>
 </resources>
